<resources>
    <string name="app_name">SAP JAVA</string>
    <string name="authorization">Авторизация</string>
    <string name="params">Параметры поиска таблицы</string>
    <string name="modules">Список приложений</string>
    <string name="settings">Настройки</string>
    <string name="scanner">QR Сканнер</string>
    <string name="tableName">Таблица</string>
    <string name="add_edittext">Добавить текст</string>
    <string name="result_text_default">Сфокусируйте камеру на QR коде</string>
    <string name="select_module">Выберите модуль:</string>
    <string name="username">Пользователь</string>
    <string name="password">Пароль</string>
    <string name="ln">яз</string>
    <string name="lng">яз</string>
    <string name="sign_in">Вход</string>
    <string name="get_connection">Соединение…</string>
    <string name="select_system">выберите систему :</string>
    <string name="enter">Ввод</string>
    <string name="where">Условие</string>
    <string name="fields_quantity">Количество полей</string>
    <string name="table">Таблица</string>
    <string name="order">Порядок</string>
    <string name="group">Группирование</string>
    <string name="fields_names">Наименования полей</string>
    <string name="connect">Соединение</string>
    <string name="enter_ip">Введите IP адрес и порт</string>
    <string name="getconnection">Получить соединение</string>
    <string name="connection">Соединение</string>
    <string name="home">Home</string>
    <string name="setting">Setting</string>
    <string name="contact">Contact</string>
    <string name="exit">exit</string>
    <string name="share">share</string>
    <string name="system">System</string>
    <string name="techNames">Технические имена</string>
</resources>
